# MANDATE

./: CMakeLists.txt  README.md
src/: editor.cpp  editor.h  editorManager.cpp  editorManager.h  main.cpp  rawMode.cpp  rawMode.h  screenInfo.cpp  screenInfo.h
